testsuite/tests/typecheck/should_fail/T6069.stderr

T6069.hs:13:15: error:
    • Couldn't match type ‘ST s0 Int’ with ‘forall s. ST s a0’
      Expected type: ST s0 Int -> a0
        Actual type: (forall s. ST s a0) -> a0
    • In the second argument of ‘(.)’, namely ‘runST’
      In the expression: print . runST
      In the expression: (print . runST) fourty_two

T6069.hs:14:15: error:
    • Couldn't match type ‘ST s1 Int’ with ‘forall s. ST s a1’
      Expected type: ST s1 Int -> a1
        Actual type: (forall s. ST s a1) -> a1
    • In the second argument of ‘(.)’, namely ‘runST’
      In the first argument of ‘($)’, namely ‘(print . runST)’
      In the expression: (print . runST) $ fourty_two

T6069.hs:15:16: error:
    • Couldn't match type ‘ST s2 Int’ with ‘forall s. ST s a2’
      Expected type: ST s2 Int -> a2
        Actual type: (forall s. ST s a2) -> a2
    • In the second argument of ‘(.)’, namely ‘runST’
      In the first argument of ‘($)’, namely ‘(print . runST)’
      In the expression: (print . runST) $
